<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:custom="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#31ACA0"
    tools:context=".DisplayActivity">

<!--    <Button-->
<!--        android:id="@+id/swapBTN"-->
<!--        android:layout_width="150dp"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_marginBottom="20dp"-->
<!--        android:background="@drawable/green_btn"-->
<!--        android:text="Swap Players"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintHorizontal_bias="0.5"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/homeBTN" />-->

    <Button
        android:id="@+id/homeBTN"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="70dp"
        android:background="@drawable/blue_btn"
        android:onClick="home"
        android:text="@string/home"
        android:textAllCaps="false"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/playAgain" />

    <Button
        android:id="@+id/playAgain"
        android:layout_width="125dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="48dp"
        android:layout_marginBottom="70dp"
        android:background="@drawable/red_btn"
        android:onClick="restart"
        android:text="@string/restart"
        android:textAllCaps="false"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/playerTurn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/tic_tac_toe"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.example.tictactoe20.TicTacToeBoard
        android:id="@+id/ticTacToeBoard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/homeBTN"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/playerTurn"
        custom:colorBoard="#000000"
        custom:oColor="#FF0000"
        custom:winningColor="#00FF00"
        custom:xColor="#0000FF" />
</androidx.constraintlayout.widget.ConstraintLayout>